--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -181,3 +181,5 @@ section .container.active .singinBx .imgBx {
         width: none;
     }
 }
+
+@import url("//unpkg.com/element-ui@2.15.14/lib/theme-chalk/index.css");
